[gd_scene load_steps=5 format=3 uid="uid://dba4vgtxunibj"]

[ext_resource type="Script" uid="uid://bdsoed5mgs5yr" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://djs5ojbasd082" path="res://assets/title.png" id="2_ekxnf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6cm7"]
bg_color = Color(0.137255, 0.0784314, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.137255, 0.0784314, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.235294, 0.141176, 0.0823529, 1)

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 2

[node name="MainContainer" type="VBoxContainer" parent="UILayer"]
custom_minimum_size = Vector2(300, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleSection" type="VBoxContainer" parent="UILayer/MainContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UILayer/MainContainer/TitleSection"]
layout_mode = 2
texture = ExtResource("2_ekxnf")
expand_mode = 4

[node name="ButtonSection" type="VBoxContainer" parent="UILayer/MainContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PlayButton" type="Button" parent="UILayer/MainContainer/ButtonSection"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "PLAY"

[node name="HowToPlayButton" type="Button" parent="UILayer/MainContainer/ButtonSection"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "HOW TO PLAY"

[node name="SettingsButton" type="Button" parent="UILayer/MainContainer/ButtonSection"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="UILayer/MainContainer/ButtonSection"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "QUIT"

[node name="HowToPlayPanel" type="Panel" parent="UILayer"]
visible = false
custom_minimum_size = Vector2(600, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l6cm7")

[node name="HowToPlayContainer" type="VBoxContainer" parent="UILayer/HowToPlayPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HowToPlayTitle" type="Label" parent="UILayer/HowToPlayPanel/HowToPlayContainer"]
layout_mode = 2
text = "How to Play"
horizontal_alignment = 1

[node name="Instructions" type="RichTextLabel" parent="UILayer/HowToPlayPanel/HowToPlayContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Making Coffee:
- Click ingredients to add them to your cup
- Different customers want different drinks
- Watch the speech bubbles for their orders

Timing:
- Hold the brew button for the right amount of time
- Perfect timing = happy customer!

Good luck!"

[node name="CloseButton" type="Button" parent="UILayer/HowToPlayPanel/HowToPlayContainer"]
layout_mode = 2
text = "CLOSE"

[node name="SettingsPanel" type="Panel" parent="UILayer"]
visible = false
custom_minimum_size = Vector2(400, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ekxnf")

[node name="SettingsContainer" type="VBoxContainer" parent="UILayer/SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="SettingsTitle" type="Label" parent="UILayer/SettingsPanel/SettingsContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="SoundSection" type="HBoxContainer" parent="UILayer/SettingsPanel/SettingsContainer"]
layout_mode = 2

[node name="SoundLabel" type="Label" parent="UILayer/SettingsPanel/SettingsContainer/SoundSection"]
layout_mode = 2
text = "Sound"

[node name="SoundToggle" type="CheckBox" parent="UILayer/SettingsPanel/SettingsContainer/SoundSection"]
layout_mode = 2

[node name="FullscreenSection" type="HBoxContainer" parent="UILayer/SettingsPanel/SettingsContainer"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="UILayer/SettingsPanel/SettingsContainer/FullscreenSection"]
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenToggle" type="CheckBox" parent="UILayer/SettingsPanel/SettingsContainer/FullscreenSection"]
layout_mode = 2

[node name="CloseSettingsButton" type="Button" parent="UILayer/SettingsPanel/SettingsContainer"]
layout_mode = 2
text = "CLOSE"
